--- a/admin-test.html
+++ b/admin-test.html
@@ -29,7 +29,7 @@
     </div>
 
   </div>
-
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
     // =============================
     //   CONFIGURAR SUPABASE
