--- a/admin-test.html
+++ b/admin-test.html
@@ -29,7 +29,7 @@
     </div>
 
   </div>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <script>
     // =============================
     //   CONFIGURAR SUPABASE
@@ -37,138 +37,130 @@
     const SUPABASE_URL = "https://jwcgiuhdugjunndfpdjr.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY";
 
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // =============================
-    //   CREAR TARJETAS
+    //   EJECUTAR CUANDO DOM ESTÉ LISTO
     // =============================
-    function crearCardPendiente(s, materiales) {
-      const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
+    document.addEventListener("DOMContentLoaded", () => {
 
-      return `
-        <div class="p-4 bg-gray-50 border rounded-lg shadow-sm">
-          <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
-          <p><strong>Docente:</strong> ${s.docente}</p>
-          <p><strong>Asignatura:</strong> ${s.asignatura}</p>
+      // =============================
+      //   CREAR TARJETAS
+      // =============================
+      function crearCardPendiente(s, materiales) {
+        const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
+        return `
+          <div class="p-4 bg-gray-50 border rounded-lg shadow-sm">
+            <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
+            <p><strong>Docente:</strong> ${s.docente}</p>
+            <p><strong>Asignatura:</strong> ${s.asignatura}</p>
 
-          <p class="mt-2 font-semibold">Materiales:</p>
-          <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
-        </div>
-      `;
-    }
+            <p class="mt-2 font-semibold">Materiales:</p>
+            <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
+          </div>
+        `;
+      }
 
-    function crearCardEntregada(s, materiales) {
-      const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
+      function crearCardEntregada(s, materiales) {
+        const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
+        return `
+          <div class="p-4 bg-gray-50 border rounded-lg shadow-sm">
+            <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
+            <p><strong>Docente:</strong> ${s.docente}</p>
+            <p><strong>Asignatura:</strong> ${s.asignatura}</p>
 
-      return `
-        <div class="p-4 bg-gray-50 border rounded-lg shadow-sm">
-          <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
-          <p><strong>Docente:</strong> ${s.docente}</p>
-          <p><strong>Asignatura:</strong> ${s.asignatura}</p>
+            <p class="mt-2 font-semibold">Materiales:</p>
+            <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
 
-          <p class="mt-2 font-semibold">Materiales:</p>
-          <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
-
-          <div class="mt-3">
-            <textarea id="coment_${s.id}" class="w-full p-2 border rounded-lg text-sm" placeholder="Escribe un comentario..."></textarea>
-
-            <div class="flex gap-2 mt-2">
-              <button onclick="guardarComentario(${s.id})"
-                class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700">
-                Enviar comentario
-              </button>
-
-              <button onclick="guardarSinComentario(${s.id})"
-                class="px-3 py-1 bg-gray-500 text-white rounded-lg text-sm hover:bg-gray-600">
-                Sin comentario
-              </button>
+            <div class="mt-3">
+              <textarea id="coment_${s.id}" class="w-full p-2 border rounded-lg text-sm" placeholder="Escribe un comentario..."></textarea>
+              <div class="flex gap-2 mt-2">
+                <button onclick="guardarComentario(${s.id})"
+                  class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700">
+                  Enviar comentario
+                </button>
+                <button onclick="guardarSinComentario(${s.id})"
+                  class="px-3 py-1 bg-gray-500 text-white rounded-lg text-sm hover:bg-gray-600">
+                  Sin comentario
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-      `;
-    }
-
-    // =============================
-    //   CARGAR LISTAS
-    // =============================
-    async function cargarPendientes() {
-      const cont = document.getElementById("listaPendientes");
-      cont.innerHTML = "";
-
-      const { data: solicitudes } = await supabase
-        .from("solicitudes")
-        .select("*")
-        .eq("estado", "Pendiente")
-        .order("id", { ascending: false });
-
-      for (const s of solicitudes) {
-        const { data: materiales } = await supabase
-          .from("materiales_solicitados")
-          .select("*")
-          .eq("id_solicitud", s.id);
-
-        cont.insertAdjacentHTML("beforeend", crearCardPendiente(s, materiales));
+        `;
       }
-    }
 
-    async function cargarEntregadas() {
-      const cont = document.getElementById("listaEntregadas");
-      cont.innerHTML = "";
-
-      const { data: solicitudes } = await supabase
-        .from("solicitudes")
-        .select("*")
-        .eq("estado", "Entregado")
-        .is("comentario_entrega", null)
-        .order("id", { ascending: false });
-
-      for (const s of solicitudes) {
-        const { data: materiales } = await supabase
-          .from("materiales_solicitados")
+      // =============================
+      //   CARGAR LISTAS
+      // =============================
+      async function cargarPendientes() {
+        const cont = document.getElementById("listaPendientes");
+        cont.innerHTML = "";
+        const { data: solicitudes } = await supabase
+          .from("solicitudes")
           .select("*")
-          .eq("id_solicitud", s.id);
-
-        cont.insertAdjacentHTML("beforeend", crearCardEntregada(s, materiales));
+          .eq("estado", "Pendiente")
+          .order("id", { ascending: false });
+        for (const s of solicitudes) {
+          const { data: materiales } = await supabase
+            .from("materiales_solicitados")
+            .select("*")
+            .eq("id_solicitud", s.id);
+          cont.insertAdjacentHTML("beforeend", crearCardPendiente(s, materiales));
+        }
       }
-    }
 
-    async function cargarTodo() {
-      cargarPendientes();
-      cargarEntregadas();
-    }
+      async function cargarEntregadas() {
+        const cont = document.getElementById("listaEntregadas");
+        cont.innerHTML = "";
+        const { data: solicitudes } = await supabase
+          .from("solicitudes")
+          .select("*")
+          .eq("estado", "Entregado")
+          .is("comentario_entrega", null)
+          .order("id", { ascending: false });
+        for (const s of solicitudes) {
+          const { data: materiales } = await supabase
+            .from("materiales_solicitados")
+            .select("*")
+            .eq("id_solicitud", s.id);
+          cont.insertAdjacentHTML("beforeend", crearCardEntregada(s, materiales));
+        }
+      }
 
-    // =============================
-    //  FUNCIONES DE COMENTARIO
-    // =============================
-    async function guardarComentario(id) {
-      const txt = document.getElementById(`coment_${id}`).value.trim();
-      if (!txt) return alert("Escribe un comentario primero.");
+      async function cargarTodo() {
+        await cargarPendientes();
+        await cargarEntregadas();
+      }
 
-      await supabase
-        .from("solicitudes")
-        .update({ comentario_entrega: txt })
-        .eq("id", id);
+      // =============================
+      //  FUNCIONES DE COMENTARIO
+      // =============================
+      window.guardarComentario = async function(id) {
+        const txt = document.getElementById(`coment_${id}`).value.trim();
+        if (!txt) return alert("Escribe un comentario primero.");
+        await supabase
+          .from("solicitudes")
+          .update({ comentario_entrega: txt })
+          .eq("id", id);
+        cargarTodo();
+      }
 
+      window.guardarSinComentario = async function(id) {
+        await supabase
+          .from("solicitudes")
+          .update({ comentario_entrega: "Sin comentario" })
+          .eq("id", id);
+        cargarTodo();
+      }
+
+      // =============================
+      //   AUTO-ACTUALIZACIÓN 5s
+      // =============================
       cargarTodo();
-    }
+      setInterval(cargarTodo, 5000);
 
-    async function guardarSinComentario(id) {
-      await supabase
-        .from("solicitudes")
-        .update({ comentario_entrega: "Sin comentario" })
-        .eq("id", id);
-
-      cargarTodo();
-    }
-
-    // =============================
-    //   AUTO-ACTUALIZACIÓN 5s
-    // =============================
-    cargarTodo();
-    setInterval(cargarTodo, 5000);
-
+    }); // fin DOMContentLoaded
   </script>
-
 </body>
 </html>
 
