--- a/admin-test.html
+++ b/admin-test.html
@@ -1,38 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Panel de Solicitudes</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-</head>
-
-<body class="bg-gray-100 p-6">
-  <h1 class="text-3xl font-bold text-center mb-6">Panel de Solicitudes</h1>
-
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-7xl mx-auto">
-
-    <!-- Pendientes -->
-    <div class="bg-white shadow-md rounded-xl p-4 border-t-4 border-yellow-500">
-      <h2 class="text-2xl font-bold mb-4 text-yellow-600">Solicitudes Pendientes</h2>
-      <div id="listaPendientes" class="space-y-4 max-h-[85vh] overflow-y-auto pr-2"></div>
-    </div>
-
-    <!-- Entregadas sin comentario -->
-    <div class="bg-white shadow-md rounded-xl p-4 border-t-4 border-green-600">
-      <h2 class="text-2xl font-bold mb-4 text-green-700">Solicitudes Entregadas (Sin Comentario)</h2>
-      <div id="listaEntregadas" class="space-y-4 max-h-[85vh] overflow-y-auto pr-2"></div>
-    </div>
-
-  </div>
-
-  <script>
+<script>
     // =============================
-    //   CONFIGURAR SUPABASE
+    //   CONFIGURAR SUPABASE
     // =============================
     const SUPABASE_URL = "https://jwcgiuhdugjunndfpdjr.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY";
@@ -40,128 +8,161 @@
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // =============================
-    //   EJECUTAR CUANDO DOM ESTÉ LISTO
+    //   EJECUTAR CUANDO DOM ESTÉ LISTO
     // =============================
     document.addEventListener("DOMContentLoaded", () => {
 
-      // =============================
-      //   CREAR TARJETAS
-      // =============================
-      function crearCardPendiente(s, materiales) {
-        const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
-        return `
-          <div class="p-4 bg-gray-50 border rounded-lg shadow-sm">
-            <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
-            <p><strong>Docente:</strong> ${s.docente}</p>
-            <p><strong>Asignatura:</strong> ${s.asignatura}</p>
+        // =============================
+        //   CREAR TARJETAS
+        // =============================
+        function crearCardPendiente(s, materiales) {
+            const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
+            return `
+              <div id="solicitud_${s.id}" class="p-4 bg-gray-50 border rounded-lg shadow-sm">
+                <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
+                <p><strong>Docente:</strong> ${s.docente}</p>
+                <p><strong>Asignatura:</strong> ${s.asignatura}</p>
 
-            <p class="mt-2 font-semibold">Materiales:</p>
-            <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
-          </div>
-        `;
-      }
-
-      function crearCardEntregada(s, materiales) {
-        const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
-        return `
-          <div class="p-4 bg-gray-50 border rounded-lg shadow-sm">
-            <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
-            <p><strong>Docente:</strong> ${s.docente}</p>
-            <p><strong>Asignatura:</strong> ${s.asignatura}</p>
-
-            <p class="mt-2 font-semibold">Materiales:</p>
-            <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
-
-            <div class="mt-3">
-              <textarea id="coment_${s.id}" class="w-full p-2 border rounded-lg text-sm" placeholder="Escribe un comentario..."></textarea>
-              <div class="flex gap-2 mt-2">
-                <button onclick="guardarComentario(${s.id})"
-                  class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700">
-                  Enviar comentario
-                </button>
-                <button onclick="guardarSinComentario(${s.id})"
-                  class="px-3 py-1 bg-gray-500 text-white rounded-lg text-sm hover:bg-gray-600">
-                  Sin comentario
-                </button>
-              </div>
-            </div>
-          </div>
-        `;
-      }
-
-      // =============================
-      //   CARGAR LISTAS
-      // =============================
-      async function cargarPendientes() {
-        const cont = document.getElementById("listaPendientes");
-        cont.innerHTML = "";
-        const { data: solicitudes } = await supabase
-          .from("solicitudes")
-          .select("*")
-          .eq("estado", "Pendiente")
-          .order("id", { ascending: false });
-        for (const s of solicitudes) {
-          const { data: materiales } = await supabase
-            .from("materiales_solicitados")
-            .select("*")
-            .eq("id_solicitud", s.id);
-          cont.insertAdjacentHTML("beforeend", crearCardPendiente(s, materiales));
+                <p class="mt-2 font-semibold">Materiales:</p>
+                <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
+              </div>
+            `;
         }
-      }
 
-      async function cargarEntregadas() {
-        const cont = document.getElementById("listaEntregadas");
-        cont.innerHTML = "";
-        const { data: solicitudes } = await supabase
-          .from("solicitudes")
-          .select("*")
-          .eq("estado", "Entregado")
-          .is("comentario_entrega", null)
-          .order("id", { ascending: false });
-        for (const s of solicitudes) {
-          const { data: materiales } = await supabase
-            .from("materiales_solicitados")
-            .select("*")
-            .eq("id_solicitud", s.id);
-          cont.insertAdjacentHTML("beforeend", crearCardEntregada(s, materiales));
+        function crearCardEntregada(s, materiales) {
+            const materialesHTML = materiales.map(m => `<li>${m.material} — ${m.cantidad} ud</li>`).join("");
+            return `
+              <div id="solicitud_${s.id}" class="p-4 bg-gray-50 border rounded-lg shadow-sm">
+                <p class="text-sm text-gray-600"><strong>ID:</strong> ${s.id}</p>
+                <p><strong>Docente:</strong> ${s.docente}</p>
+                <p><strong>Asignatura:</strong> ${s.asignatura}</p>
+
+                <p class="mt-2 font-semibold">Materiales:</p>
+                <ul class="ml-4 list-disc text-sm">${materialesHTML}</ul>
+
+                <div class="mt-3">
+                  <textarea id="coment_${s.id}" class="w-full p-2 border rounded-lg text-sm" placeholder="Escribe un comentario..."></textarea>
+                  <div class="flex gap-2 mt-2">
+                    <button onclick="guardarComentario(${s.id})"
+                      class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700">
+                      Enviar comentario
+                    </button>
+                    <button onclick="guardarSinComentario(${s.id})"
+                      class="px-3 py-1 bg-gray-500 text-white rounded-lg text-sm hover:bg-gray-600">
+                      Sin comentario
+                    </button>
+                  </div>
+                </div>
+              </div>
+            `;
         }
-      }
 
-      async function cargarTodo() {
-        await cargarPendientes();
-        await cargarEntregadas();
-      }
+        // =============================
+        //   CARGAR LISTAS
+        // =============================
 
-      // =============================
-      //  FUNCIONES DE COMENTARIO
-      // =============================
-      window.guardarComentario = async function(id) {
-        const txt = document.getElementById(`coment_${id}`).value.trim();
-        if (!txt) return alert("Escribe un comentario primero.");
-        await supabase
-          .from("solicitudes")
-          .update({ comentario_entrega: txt })
-          .eq("id", id);
+        // --- Carga de Pendientes (sin cambio, solo reemplazo) ---
+        async function cargarPendientes() {
+            const cont = document.getElementById("listaPendientes");
+            const { data: solicitudes } = await supabase
+                .from("solicitudes")
+                .select("*")
+                .eq("estado", "Pendiente")
+                .order("id", { ascending: false });
+
+            // Generar el HTML para las pendientes
+            let html = '';
+            for (const s of solicitudes) {
+                const { data: materiales } = await supabase
+                    .from("materiales_solicitados")
+                    .select("*")
+                    .eq("id_solicitud", s.id);
+                html += crearCardPendiente(s, materiales);
+            }
+            cont.innerHTML = html; // Reemplazar todo el contenido de una vez
+        }
+
+        // --- Carga de Entregadas (con lógica para preservar comentarios) ---
+        async function cargarEntregadas() {
+            const cont = document.getElementById("listaEntregadas");
+
+            // 1. Guardar el contenido de los comentarios (textarea) existentes
+            const comentariosGuardados = {};
+            document.querySelectorAll("#listaEntregadas textarea").forEach(textarea => {
+                const id = textarea.id.replace("coment_", "");
+                comentariosGuardados[id] = textarea.value;
+            });
+
+            // 2. Obtener los nuevos datos de Supabase
+            const { data: solicitudes } = await supabase
+                .from("solicitudes")
+                .select("*")
+                .eq("estado", "Entregado")
+                .is("comentario_entrega", null)
+                .order("id", { ascending: false });
+
+            // 3. Generar el nuevo HTML
+            let nuevoHtml = "";
+            for (const s of solicitudes) {
+                const { data: materiales } = await supabase
+                    .from("materiales_solicitados")
+                    .select("*")
+                    .eq("id_solicitud", s.id);
+                nuevoHtml += crearCardEntregada(s, materiales);
+            }
+
+            // 4. Reemplazar el HTML del contenedor
+            cont.innerHTML = nuevoHtml;
+
+            // 5. Restaurar el contenido de los comentarios guardados
+            solicitudes.forEach(s => {
+                const id = s.id.toString();
+                if (comentariosGuardados[id]) {
+                    const textarea = document.getElementById(`coment_${id}`);
+                    if (textarea) {
+                        textarea.value = comentariosGuardados[id];
+                    }
+                }
+            });
+        }
+
+        async function cargarTodo() {
+            // El orden es importante si se necesita sincronización estricta, pero para
+            // este caso, simplemente asegura que ambas se carguen.
+            await cargarPendientes();
+            await cargarEntregadas();
+        }
+
+        // =============================
+        //  FUNCIONES DE COMENTARIO
+        // =============================
+        window.guardarComentario = async function(id) {
+            const txt = document.getElementById(`coment_${id}`).value.trim();
+            if (!txt) return alert("Escribe un comentario primero.");
+            await supabase
+                .from("solicitudes")
+                .update({ comentario_entrega: txt })
+                .eq("id", id);
+            // Llama a cargarTodo para que la solicitud desaparezca del panel 'Entregadas'
+            cargarTodo();
+        }
+
+        window.guardarSinComentario = async function(id) {
+            await supabase
+                .from("solicitudes")
+                .update({ comentario_entrega: "Sin comentario" })
+                .eq("id", id);
+            // Llama a cargarTodo para que la solicitud desaparezca del panel 'Entregadas'
+            cargarTodo();
+        }
+
+        // =============================
+        //   AUTO-ACTUALIZACIÓN 5s
+        // =============================
         cargarTodo();
-      }
-
-      window.guardarSinComentario = async function(id) {
-        await supabase
-          .from("solicitudes")
-          .update({ comentario_entrega: "Sin comentario" })
-          .eq("id", id);
-        cargarTodo();
-      }
-
-      // =============================
-      //   AUTO-ACTUALIZACIÓN 5s
-      // =============================
-      cargarTodo();
-      setInterval(cargarTodo, 5000);
+        // Usa setInterval para la actualización periódica
+        setInterval(cargarTodo, 5000);
 
     }); // fin DOMContentLoaded
-  </script>
-</body>
-</html>
-
+</script>
 
