--- a/admin-test.html
+++ b/admin-test.html
@@ -1,3 +1,35 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Panel de Solicitudes</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+</head>
+
+<body class="bg-gray-100 p-6">
+  <h1 class="text-3xl font-bold text-center mb-6">Panel de Solicitudes</h1>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-7xl mx-auto">
+
+    <!-- Pendientes -->
+    <div class="bg-white shadow-md rounded-xl p-4 border-t-4 border-yellow-500">
+      <h2 class="text-2xl font-bold mb-4 text-yellow-600">Solicitudes Pendientes</h2>
+      <div id="listaPendientes" class="space-y-4 max-h-[85vh] overflow-y-auto pr-2"></div>
+    </div>
+
+    <!-- Entregadas sin comentario -->
+    <div class="bg-white shadow-md rounded-xl p-4 border-t-4 border-green-600">
+      <h2 class="text-2xl font-bold mb-4 text-green-700">Solicitudes Entregadas (Sin Comentario)</h2>
+      <div id="listaEntregadas" class="space-y-4 max-h-[85vh] overflow-y-auto pr-2"></div>
+    </div>
+
+  </div>
+
 <script>
     // =============================
     //   CONFIGURAR SUPABASE
@@ -208,3 +240,6 @@
 
     }); // fin DOMContentLoaded
 </script>
+</body>
+</html>
+
